# twins2-explorer

./: .gitignore  CI_CD_TEST.md  README.md
TWINS-Core/twins_node_rust/: Cargo.toml
TWINS-Core/twins_node_rust/src/: api_service.rs  chainparams.rs  governance_manager.rs  instant_send_manager.rs  main.rs  masternode_manager.rs  spork_manager.rs  storage.rs  util.rs
TWINS-Core/twins_node_rust/src/blockchain/: block_index.rs  chain_state.rs  mod.rs  orphan_manager.rs
TWINS-Core/twins_node_rust/src/p2p/: connection.rs  fast_sync.rs  hybrid_sync.rs  messages.rs  mod.rs  parallel_sync_manager.rs  peer.rs  peer_manager.rs  seeds.rs
twins-deploy/: config.json  deploy.sh  monitor.sh  twins-deploy-ctl
twins-explorer/: next.config.ts  package-lock.json  package.json
twins-explorer/src/app/: globals.css  layout.tsx  page.tsx
twins-explorer/src/app/block/[id]/: page.tsx
twins-explorer/src/app/node/: page.tsx
twins-explorer/src/app/stats/: page.tsx
twins-explorer/src/app/tx/[txid]/: page.tsx
twins-explorer/src/components/: AuthWrapper.js  NodeStatus.tsx  SearchBar.tsx
twins-explorer/src/hooks/: useRealTimeBlock.ts  useRealTimeData.ts  useRealTimeTransaction.ts
twins-explorer/src/lib/: api.ts
