[package]
name = "twins_node_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] } # Ensure bundled feature
actix-web = "4"
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4"
env_logger = "0.11"
config = "0.14"
thiserror = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
byteorder = "1" # Added for P2P message serialization
sha2 = "0.10"    # Added for checksum calculation
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] } # For ECDSA signature verification

# PIVX/Bitcoin related crates (placeholders, might need more specific ones or custom implementations)
# bitcoin_hashes = "0.11" # For sha256d etc. - or use sha2 crate directly

# TODO: Add crates for BLS signatures if PIVX uses them extensively and if not part of secp256k1 above for block sigs
# TODO: Evaluate P2P networking library if needed, or use tokio::net for direct TCP.

# Added by AI Assistant for build dependencies
axum = "0.7"
# serde is likely already present, ensure features = ["derive"] if re-adding or checking
# serde = { version = "1.0", features = ["derive"] }
# serde_json is likely already present if serde is used
# serde_json = "1.0"
# tokio ensure full features
# tokio = { version = "1", features = ["full"] }
# rusqlite ensure bundled feature
# rusqlite = { version = "0.31.0", features = ["bundled"] }
# ---- End AI Assistant Dependencies ---- 